<resources>
    <string name="app_name">IEvent</string>
    <string name="action_settings">Settings</string>
    <string name="login_pxl_mail">PXL-Mail</string>
    <string name="login_mail_hint"><![CDATA[<nummer>@student.pxl.be]]></string>
    <string name="login_password">Wachtwoord</string>
    <string name="title_activity_teacher_overview">TeacherOverviewActivity</string>
    <string name="title_activity_create_event">CreateEventActivitys </string>
    <string name="event_name">Naam: </string>
    <string name="event_category">Categorie: </string>
    <string name="event_location">Locatie: </string>
    <string name="event_startDate">Start datum: </string>
    <string name="event_endDate">Eind datum: </string>
    <string name="event_locationName">Locatie Naam: </string>
    <string name="event_organisor">Organisator: </string>
    <string name="event_speakers">Sprekers: </string>
    <string name="event_description">Descriptie: </string>
    <string name="date_hint"><![CDATA[<1/1/1990 20:00>]]></string>
    <string name="amount">Hoeveelheid: </string>
    <string name="title_activity_edit_event">EditEventActivity</string>
    <string name="title_activity_attendance_list">AttendanceListActivity</string>
</resources>
