<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.pxl.ievent.activities.StudentOverviewActivity">


    <Toolbar
        android:id="@+id/tb_create_event_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:title="Event aanmaken"
        android:titleTextColor="@color/colorTextWhite"
        >
    </Toolbar>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_create_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tb_create_event_header"
        android:layout_marginTop="8dp"
        android:text="@string/event_name"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="10sp"/>

    <EditText
        android:id="@+id/et_create_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300sp"
        android:layout_marginLeft="10sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_create_event_name" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_create_event_organisor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_organisor"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="10sp"
        android:layout_below="@+id/et_create_event_name"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_create_event_organisor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300sp"
        android:layout_marginLeft="10sp"
        android:layout_below="@+id/tv_create_event_organisor"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_create_event_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_category"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="10sp"
        android:layout_below="@+id/et_create_event_organisor"
        android:layout_alignParentStart="true" />
    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="125sp"
        android:layout_marginBottom="8sp"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/tv_create_event_category"
        android:layout_alignStart="@+id/tv_create_event_category" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_create_event_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_location"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="10sp"
        android:layout_below="@+id/spinner_category"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_create_event_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300sp"
        android:layout_marginLeft="10sp"
        android:layout_below="@+id/tv_create_event_location"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_create_event_location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_locationName"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="10sp"
        android:layout_below="@+id/et_create_event_location"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_create_event_location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300sp"
        android:layout_marginLeft="10sp"
        android:layout_below="@+id/tv_create_event_location_name"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_create_event_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_startDate"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="10sp"
        android:layout_below="@+id/et_create_event_location_name" />

    <EditText
        android:id="@+id/et_create_event_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300sp"
        android:hint="@string/date_hint"
        android:layout_marginLeft="10sp"
        android:layout_below="@+id/tv_create_event_start_date"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_create_event_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_endDate"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="10sp"
        android:layout_below="@+id/et_create_event_start_date"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_create_event_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300sp"
        android:hint="@string/date_hint"
        android:layout_marginLeft="10sp"
        android:layout_below="@+id/tv_create_event_end_date"
        android:layout_alignParentStart="true" />



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_create_event"
        android:layout_width="150px"
        android:layout_height="150px"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="40px"
        android:src="@drawable/ic_done_white_24dp"
        />

</RelativeLayout>
